src/test/compile-fail/variant_type_mismatch.mmtn
// { "compile_status": "fail" }

struct Unit {}

enum Foo {
    Bar(u64),
}

fn main() -> u64 {
    let foo = Foo::Bar(Unit {});
    0
}
